<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="987dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toStartOf="@+id/itemNameDisplay"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/best_buy_logo" />

            <TextView
                android:id="@+id/itemNameDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Large"
                app:layout_constraintBottom_toTopOf="@+id/space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/itemUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/space" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/space"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/initialPriceTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_price"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    tools:layout_editor_absoluteX="8dp" />

                <TextView
                    android:id="@+id/currentPriceTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:layout_editor_absoluteX="157dp"
                    tools:layout_editor_absoluteY="66dp" />

                <TextView
                    android:id="@+id/percentChangeTag"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:text="@string/percent_change"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:layout_editor_absoluteX="248dp"
                    tools:layout_editor_absoluteY="160dp" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteY="1043dp" />

                <Button
                    android:id="@+id/checkPriceButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:onClick="checkPriceClick"
                    android:text="@string/button_check_price"
                    app:layout_constraintStart_toStartOf="@+id/scrollView2"
                    tools:layout_editor_absoluteY="133dp" />

            </LinearLayout>

            <Space
                android:id="@+id/space"
                android:layout_width="10dp"
                android:layout_height="113dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/space">

                <TextView
                    android:id="@+id/initialPriceDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_price_num"
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="129dp" />

                <TextView
                    android:id="@+id/currentPriceDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_price_num"
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="228dp" />

                <TextView
                    android:id="@+id/percentChangeDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/percent_change_num"
                    android:textAlignment="viewEnd"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    tools:layout_editor_absoluteY="1043dp" />

                <Button
                    android:id="@+id/viewPageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:onClick="viewPageClick"
                    android:text="@string/view_page_button"
                    app:layout_constraintEnd_toEndOf="@+id/scrollView2"
                    tools:layout_editor_absoluteY="133dp" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>